--- a/index.html
+++ b/index.html
@@ -1003,14 +1003,14 @@
                     </div>
                     <div class="copy-item-right">
                         <ul>
-                            <li><a href="#">home </a></li>
-                            <li><a href="#">about us</a></li>
-                            <li><a href="#">pages</a></li>
-                            <li><a href="#">feature</a></li>
-                            <li><a href="#">portfolio</a></li>
-                            <li><a href="#">blog</a></li>
-                            <li><a href="#">shop</a></li>
-                            <li><a href="#">contact us</a></li>
+                            <li><a href="#banner">home </a></li>
+                            <li><a href="#service">about us</a></li>
+                            <li><a href="#stuff">pages</a></li>
+                            <li><a href="#choose">feature</a></li>
+                            <li><a href="#portfolio">portfolio</a></li>
+                            <li><a href="#blog">blog</a></li>
+                            <li><a href="#theme">shop</a></li>
+                            <li><a href="#footer">contact us</a></li>
                         </ul>
                     </div>
                 </div>
